# UIAList

./: .gitignore  BUILD_GUIDE.md  BUILD_STATUS.md  CLAUDE.md  CMakeLists.txt  LICENSE  MIGRATION_COMPLETE.md  PACKAGING_GUIDE.md  Package.appxmanifest  README.md  STORE_LISTING.md  STORE_SUBMISSION_CHECKLIST.md  UIAList.rc  UIAList.sln  UIAList.vcxproj  UIAList_de_DE.ts  WINUI3_MIGRATION.md  WINUI3_PROGRESS.md  aboutdialog.cpp  aboutdialog.h  build_complete.ps1  build_msix.ps1  build_msix_only.ps1  build_packages.ps1  generate_store_assets.ps1  main.cpp  packages.config  resources.qrc.in  settingsdialog.cpp  settingsdialog.h  simple_msix.ps1  test_msix.ps1  translations.qrc  uialist.cpp  uialist.h  uialisticon.cpp  uialisticon.h  validate_store_ready.ps1  welcomedialog.cpp  welcomedialog.h
.claude/: settings.local.json
Assets/: README.md
deployment/: deploy.ps1
docs/: PrivacyPolicy.html  STORE_SUBMISSION_CHECKLIST.md  USER_GUIDE.md
manifests/s/slohmaier/UIAList/0.1.0/: slohmaier.UIAList.installer.yaml  slohmaier.UIAList.locale.en-US.yaml  slohmaier.UIAList.yaml
resources/: Package.appxmanifest
src/: AboutDialog.xaml  AboutDialog.xaml.cpp  AboutDialog.xaml.h  App.cpp  App.h  App.xaml  App.xaml.cpp  App.xaml.h  ControlEnumerator.cpp  ControlEnumerator.h  ControlInteraction.cpp  ControlInteraction.h  MainWindow.cpp  MainWindow.h  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  SettingsDialog.xaml  SettingsDialog.xaml.cpp  SettingsDialog.xaml.h  SettingsManager.cpp  SettingsManager.h  SystemTrayManager.cpp  SystemTrayManager.h  UIAList.rc  UIAList_de_DE.ts  UIAList_en_US.ts  WelcomeDialog.xaml  WelcomeDialog.xaml.cpp  WelcomeDialog.xaml.h  aboutdialog.cpp  aboutdialog.h  main.cpp  pch.cpp  pch.h  translations.qrc  uialist.cpp  uialist.h  uialisticon.cpp  uialisticon.h
tools/: validate_store_ready.ps1
translations/: UIAList_de_DE.ts
